# rust-bib

./: .gitignore  Cargo.toml  README.md  t.html  t.txt
src/: bibtex.rs  fetch.rs  main.rs
