[package]
name = "rust-bib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.13.0"
clap = { version = "4.0.8", features = ["derive"] }
env_logger = "0.9.1"
log = "0.4.17"
clap-verbosity-flag = "2.0.0"
